# subwin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
crates/subwin-audio/: Cargo.toml  README.md
crates/subwin-audio/src/: device.rs  lib.rs  mixer.rs
crates/subwin-backend/: Cargo.toml  README.md
crates/subwin-backend/src/: app.rs  config.rs  lib.rs  runtime.rs  state.rs
crates/subwin-backend/src/services/: audio_service.rs  config_service.rs  mod.rs  model_service.rs  transcription_service.rs
crates/subwin-bridge/: Cargo.toml  README.md
crates/subwin-bridge/src/: audio.rs  config.rs  lib.rs  notification.rs  whisper_model.rs
crates/subwin-frontend/: Cargo.toml
crates/subwin-frontend/src/: formatting.rs  lib.rs
crates/subwin-frontend/src/components/: download_indicator.rs  mod.rs  settings_item.rs
crates/subwin-frontend/src/entities/: audio_devices_entity.rs  download_entity.rs  mod.rs  settings_entity.rs
crates/subwin-frontend/src/views/: captions_root_view.rs  mod.rs  overview_page.rs  settings_page.rs
crates/subwin-frontend/src/views/model/: download_view.rs  mod.rs
crates/subwin-speech/: Cargo.toml  README.md
crates/subwin-speech/src/: lib.rs  stabilizer.rs  whisper.rs
src/: _main.rs  main.rs  math.rs
src/audio/: device.rs  mixer.rs  mod.rs  resampler.rs
src/speech/: mod.rs  whisper.rs
