[package]
name = "subwin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cpal = "0.17.0"
gpui = "0.2.2"
gpui-component = "0.5.0"
log = "0.4.29"
num-traits = "0.2.19"
num_cpus = "1.17.0"
ringbuf-blocking = "0.1.0-rc.5"
rubato = "0.16.2"
simple_logger = "5.1.0"
thiserror = "2.0.17"
whisper-rs = { version = "0.15.1", features = ["metal"] }

subwin-frontend = { path = "crates/subwin-frontend" }
subwin-backend = { path = "crates/subwin-backend" }
subwin-bridge = { path = "crates/subwin-bridge" }

[workspace]
members = ["crates/subwin-frontend", "crates/subwin-backend", "crates/subwin-bridge", "crates/subwin-audio"]
