[package]
name = "subwin"
version = "0.1.0"
edition = "2024"

[dependencies]
subwin-frontend = { path = "crates/subwin-frontend" }
subwin-backend = { path = "crates/subwin-backend" }
subwin-bridge = { path = "crates/subwin-bridge" }
simple_logger = { version = "5.1.0", features = ["threads"] }

[workspace]
members = ["crates/subwin-frontend", "crates/subwin-backend", "crates/subwin-bridge", "crates/subwin-audio", "crates/subwin-speech"]
