[package]
name = "subwin-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread"] }
subwin-bridge = { path = "../subwin-bridge" }
toml = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
thiserror = "2.0.17"
reqwest = { version = "0.12.28", features = ["stream"] }
futures-util = "0.3.31"
log = "0.4.29"
